--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "firebase": "^10.13.0",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
