--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.8.3",
+    "@clerk/clerk-sdk-node": "^5.0.33",
     "@clerk/nextjs": "^5.3.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.5",
     "firebase": "^10.13.0",
     "next": "^14.2.7",
     "react": "^18",
