--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.5",
     "firebase": "^10.13.1",
     "next": "^14.2.7",
+    "openai": "^4.57.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
