--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@ngrok/ngrok": "^1.4.1",
     "axios": "^1.7.5",
     "firebase": "^10.13.1",
-    "next": "^14.2.7",
+    "next": "^14.2.8",
     "openai": "^4.58.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
